--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board.jpg" target="_self">Mood Board 1</a><br>
 	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_2.jpg" target="_self">Mood Board 2</a><br>
 	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_3.jpg" target="_self">Mood Board 3</a><br>
-	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_4jpg" target="_self">Mood Board 4</a><br>
+	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_4.jpg" target="_self">Mood Board 4</a><br>
 	
 </body>
 </html>
