--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
 	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_3.jpg" target="_self">Mood Board 3</a><br>
 	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_4.jpg" target="_self">Mood Board 4</a><br>
 	
+	<a href="Calculators/calc 1.jpg" target="_self">Calculator Design 1</a><br>
+	<a href="Calculators/calc 2.jpg" target="_self">Calculator Design 2</a><br>
+	<a href="Calculators/calc 3.jpg" target="_self">Calculator Design 3</a><br>
+
+
+	
+	
 </body>
 </html>
