--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 	<strong>Tommy Hinds / DES 350 </strong><br>
 	<a href="Calculator.html" target="_self">CSS Calculator</a><br>
-	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board.jpg" target="_self">Mood Board 1</a><br>
-	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_2.jpg" target="_self">Mood Board 2</a><br>
-	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_3.jpg" target="_self">Mood Board 3</a><br>
-	<a href="Massimo Vignelli/MOOD BOARD JPEGS/Massimo Mood Board_4.jpg" target="_self">Mood Board 4</a><br>
+	<a href="mood_boards/massimo_mood_board_1.jpg" target="_self">Mood_Board_1</a><br>
+	<a href="mood_boards/massimo_mood_board_2.jpg" target="_self">Mood_Board_2</a><br>
+	<a href="mood_boards/massimo_mood_board_3.jpg" target="_self">Mood_Board_3</a><br>
+	<a href="mood_boards/massimo_mood_board_4.jpg" target="_self">Mood_Board_4</a><br>
 	
-	<a href="Calculators/calc 1.jpg" target="_self">Calculator Design 1</a><br>
-	<a href="Calculators/calc 2.jpg" target="_self">Calculator Design 2</a><br>
-	<a href="Calculators/calc 3.jpg" target="_self">Calculator Design 3</a><br>
+	<a href="calculators/calc_1.jpg" target="_self">Calculator Design 1</a><br>
+	<a href="calculators/calc_2.jpg" target="_self">Calculator Design 2</a><br>
+	<a href="calculators/calc_3.jpg" target="_self">Calculator Design 3</a><br>
 
 
 	
