--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 	<strong>Tommy Hinds / DES 350 </strong><br>
 	<a href="Calculator.html" target="_self">CSS Calculator</a><br>
-	<a href="mood_boards/massimo_mood_board_1.jpg" target="_self">Mood_Board_1</a><br>
-	<a href="mood_boards/massimo_mood_board_2.jpg" target="_self">Mood_Board_2</a><br>
-	<a href="mood_boards/massimo_mood_board_3.jpg" target="_self">Mood_Board_3</a><br>
-	<a href="mood_boards/massimo_mood_board_4.jpg" target="_self">Mood_Board_4</a><br>
+	<a href="massimo_mood_board_1.jpg" target="_self">Mood_Board_1</a><br>
+	<a href="massimo_mood_board_2.jpg" target="_self">Mood_Board_2</a><br>
+	<a href="massimo_mood_board_3.jpg" target="_self">Mood_Board_3</a><br>
+	<a href="massimo_mood_board_4.jpg" target="_self">Mood_Board_4</a><br>
 	
-	<a href="calculators/calc_1.jpg" target="_self">Calculator Design 1</a><br>
-	<a href="calculators/calc_2.jpg" target="_self">Calculator Design 2</a><br>
-	<a href="calculators/calc_3.jpg" target="_self">Calculator Design 3</a><br>
+	<a href="calc_1.jpg" target="_self">Calculator Design 1</a><br>
+	<a href="calc_2.jpg" target="_self">Calculator Design 2</a><br>
+	<a href="calc_3.jpg" target="_self">Calculator Design 3</a><br>
 
 
 	
