--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 	<a href="calc_2.jpg" target="_self">calc_2</a><br>
 	<a href="calc_3.jpg" target="_self">calc_3</a><br>	
 	<a href="calc_4.jpg" target="_self">calc_4</a><br>
+	
+	<a href="calc_final.jpg" target="_self">calc_final</a><br>
+	<a href="Dieter_Rams.html" target="_self">Dieter Rams</a><br>
+	<a href="calculator_code/CALC.html" target="_self">CALC_Final_Site_Attempt</a><br>
+	
 </body>
 </html>
