--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	<a href="calc_final.jpg" target="_self">calc_final</a><br>
 	<a href="Dieter_Rams.html" target="_self">Dieter Rams</a><br>
-	<a href="calculator_code/CALC.html" target="_self">CALC_Final_Site_Attempt</a><br>
+	<a href="CALC.html" target="_self">CALC_Final_Site_Attempt</a><br>
 	
 </body>
 </html>
