--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 	<a href="Dieter_Rams.html" target="_self">Dieter Rams</a><br>
 	<a href="CALC.html" target="_self">CALC_Final_Site_Attempt</a><br>
 	
+	<a href="Swiss_Mood_Board_1.jpg" target="_self">Swiss_Mood_Board_1</a><br>
+	
 </body>
 </html>
