--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 	
 	<a href="Swiss_Mood_Board_1.jpg" target="_self">Swiss_Mood_Board_1</a><br>
 	
+	<a href="10_Principles_for_Design_Poster.jpg" target="_self">10_Principles_for_Design_Poster</a><br>
+	
 </body>
 </html>
