--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 	
 	<a href="10_Principles_for_Design_Poster.jpg" target="_self">10_Principles_for_Design_Poster</a><br>
 	
+	<a href="10_Principles.html" target="_self">10 Principles for Design</a><br>
+	
 </body>
 </html>
