--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 	
 	<a href="10_Principles.html" target="_self">10 Principles</a><br>
 	
+	<a href="Self_Portrait_1" target="_self">Self Portrait 1</a><br>
+	<a href="Self_Portrait_2" target="_self">Self Portrait 2s</a><br>
+	
+	
+	
 </body>
 </html>
