--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	
 	<a href="10_Principles.html" target="_self">10 Principles</a><br>
 	
-	<a href="Self_Portrait_1" target="_self">Self Portrait 1</a><br>
-	<a href="Self_Portrait_2" target="_self">Self Portrait 2</a><br>
+	<a href="Self_Portrait_1" target="_self">Self_Portrait_1</a><br>
+	<a href="Self_Portrait_2" target="_self">Self_Portrait_2</a><br>
 	
 	
 	
