--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	<a href="10_Principles.html" target="_self">10 Principles</a><br>
 	
-	<a href="Self_Portrait_1" target="_self">Self_Portrait_1</a><br>
-	<a href="Self_Portrait_2" target="_self">Self_Portrait_2</a><br>
+	<a href="Self_Portrait_1.jpg" target="_self">Self_Portrait_1</a><br>
+	<a href="Self_Portrait_2.jpg" target="_self">Self_Portrait_2</a><br>
 </body>
 </html>
