--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<h3>
 	<a href="Self_Portrait_1.jpg" target="_self">Self Portrait 1</a></br>
 	<a href="Self_Portrait_2.jpg" target="_self">Self Portrait 2</a></br>
+	<a href="HTML_Portrait.html" target="_self">HTML Self Portrait</a></br>
+
 	</h3>
 	
 	<p>About Me:</br></br>My name is Tommy Hinds. I am a studying Graphic Design Major.</br>I love to play guitar, and make music with my band!</p>
